<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_sign_out"
        android:orderInCategory="100"
        android:title="@string/sign_out"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_search"
        android:icon="@mipmap/ic_search"
        android:orderInCategory="90"
        android:title="@string/search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/action_update"
        android:actionLayout="@layout/update"
        android:icon="@mipmap/ic_refresh"
        android:orderInCategory="100"
        android:title="@string/update"
        app:showAsAction="always" />

</menu>
