<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.android.project.MainActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:inputType="textPersonName"
        android:hint="@string/user_name_hint"
        android:ems="10"
        android:id="@+id/editTextName"
        android:layout_above="@+id/editTextPassword"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:inputType="textPassword"
        android:hint="@string/user_password_hint"
        android:ems="10"
        android:id="@+id/editTextPassword"
        android:gravity="top"/>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/editTextPassword"
        android:layout_alignLeft="@id/editTextName"
        android:layout_alignRight="@id/editTextPassword"
        android:text="@string/sign_id"
        android:id="@+id/button"
        android:layout_gravity="center_horizontal"
        android:onClick="addUser"
        />
</RelativeLayout>
