<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/sign_up_dialog_margin"
            android:ems="10"
            android:hint="@string/user_name_hint" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/editTextName"
            android:ems="10"
            android:hint="@string/email" />

        <EditText
            android:id="@id/editTextPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/editTextEmail"
            android:ems="10"
            android:hint="@string/user_password_hint"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/editTextPasswordRepeat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/editTextPassword"
            android:ems="10"
            android:hint="Repeat password"
            android:inputType="textPassword" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@id/editTextPasswordRepeat"
            android:layout_alignLeft="@id/editTextPasswordRepeat"
            android:layout_alignRight="@id/editTextPasswordRepeat"
            android:layout_alignStart="@id/editTextPasswordRepeat"
            android:layout_below="@id/editTextPasswordRepeat"
            android:indeterminate="true"
            android:visibility="gone" />

        <Button
            android:id="@+id/btn_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/editTextPasswordRepeat"
            android:layout_alignRight="@id/editTextPasswordRepeat"
            android:layout_below="@id/progressBar"
            android:layout_marginBottom="@dimen/sign_up_dialog_margin"
            android:text="@string/sign_up" />

    </RelativeLayout>

</LinearLayout>